@startuml DER

hide circle
skinparam linetype ortho

entity Organizacion {
  organizacion_id : number <<generated>>
  --
  razon_social : text
  tipo_organizacion : number <<enum>>
  clasificacion : number <<enum>>
  'Embeded de ubicacion
  localidad_id : number
  calle : text
  altura : text
  sector_territorial_id : number <<FK>>
}

entity Contacto_x_organizacion {
  contacto_id : number <<generated>>
  organizacion_id : number <<generated>>
  --
}

entity Contacto {
  contacto_id : number <<generated>>
  --
  nombre : text
  email : text
  numero_de_whatsapp : number
}

entity SectorTerritorial {
  sector_territorial_id : number <<generated>>
  --
}

entity TipoConsumo {
  tipo_consumo_id : number <<generated>>
  --
  actividad : number <<enum>>
  alcance : number <<enum>>
  unidad : number <<enum>>
  ' factor y unidad son embebidos
  factor : number
  unidad_equivalente_carbono : number <<enum>>
  nombre : text
}

entity Medicion {
  medicion_id : number <<generated>>
  --
  organizacion_id : number <<FK>>
  tipo_consumo_id : number <<FK>>
  valor : number
  periodicidad : number <<enum>>
  periodo_de_imputacion : text
}

entity Sector {
  sector_id : number <<generated>>
  --
  organizacion_id : number <<FK>>
}

entity Miembro_x_sector {
  sector_id : number <<generated>>
  miembro_id : number <<generated>>
  --

}

entity Miembro {
  miembro_id : number <<generated>>
  --
  nombre : text
  apellido : text
  numero_de_documento : number
  tipo_de_documento : number <<enum>>
  trayecto_id : number <<FK>>
}

entity Transporte {
  transporte_id : number <<generated>>
  --
  tipo_consumo_id : number <<FK>>
  combustible_por_km : number
  tipo_transporte : number <<enum>>
  ' Analizar herencia (single-table o join)
  ' VehiculoParticular, TransportePublico y ServicioContratado
}

entity Tramo {
  tramo_id : number <<generated>>
  --
  'Embeded de ubicacion
  origen_localidad_id : number
  origen_calle : text
  origen_altura : text
  'Embeded de ubicacion
  destino_localidad_id : number
  destino_calle : text
  destino_altura : text
  transporte_id : number <<FK>>
}

entity Trayecto_x_tramo {
  trayecto_id : number <<generated>>
  tramo_id : number <<generated>>
  --
}

entity Trayecto {
  trayecto_id : number <<generated>>
  --
}

entity Parada {
  parada_id : number <<generated>>
  --
  'Embeded de ubicacion
  localidad_id : number
  calle : text
  altura : text
  transporte_id : number <<FK>>
}

entity Usuario {
  usuario_id : number <<generated>>
  --
  user : text
  password : text
  tipo_usuario : number <<enum>>
}

entity Medio_de_comunicacion {
    medio_de_comunicacion_id : number <<generated>>
    --
    discriminador : text
}

entity Organizacion_x_Medio_de_comunicacion {
    organizacion_id : number <<FK>>
    medio_de_comunicacion_id : number <<FK>>
    --
}

Organizacion ||--|{ Sector
' Documento es propiedad de Miembro
Miembro }|--|| Trayecto
Tramo }|--|| Transporte
' Ver como hacer la Herencia de transporte (single table)
' TipoTransporte va como propiedad del Transporte
' ResultadoDistancia es propiedad de Parada

Organizacion||-o{ Medicion
Medicion }o--|| TipoConsumo
Transporte }o--|| TipoConsumo
' FE queda como embedded y TipoConsumo queda como Embeddable
' Usuario no tiene relacion con ninguna entidad
Organizacion }o--|| SectorTerritorial

Organizacion_x_Medio_de_comunicacion }|--||Medio_de_comunicacion
Organizacion_x_Medio_de_comunicacion }|--||Organizacion

Contacto_x_organizacion }o--||Contacto
Contacto_x_organizacion }|--||Organizacion
Miembro_x_sector }|--||Miembro
Miembro_x_sector }|--||Sector
Trayecto_x_tramo }|--||Tramo
Trayecto_x_tramo }|--||Trayecto
Parada }o--||Transporte

@enduml